--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -209,7 +209,7 @@
 
             </HorizontalScrollView>
 
-            <Button
+            <!--<Button
                 android:id="@+id/register_button"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
@@ -222,7 +222,7 @@
                 android:textSize="15dp"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/product_scroll" />
+                app:layout_constraintTop_toBottomOf="@id/product_scroll" />-->
 
         <android.support.v7.widget.CardView
             android:id="@+id/card3"
@@ -237,7 +237,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/register_button">
+            app:layout_constraintTop_toBottomOf="@+id/product_scroll">
 
             <RelativeLayout
                 android:layout_width="match_parent"
